--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,4 @@
-APScheduler==3.6.3
-certifi==2020.6.20
-cffi==1.14.3
-cryptography==3.2.1
-decorator==4.4.2
-Pillow==8.0.1
-pycparser==2.20
-python-telegram-bot==13.0
-pytz==2020.4
-six==1.15.0
-tornado==6.1
-tzlocal==2.1
+beautifulsoup4==4.9.3
+Pillow==8.1.0
+soupsieve==2.1
+urllib3==1.26.3
